--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chainlink/contracts": "^0.2.1",
     "@openzeppelin/contracts": "^2.3.0",
     "@openzeppelin/test-helpers": "^0.5.12",
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "truffle-security": "^1.7.3"
   }
 }
