--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,7 +16,15 @@
     "@chainlink/contracts": "^0.2.1",
     "@openzeppelin/contracts": "^2.3.0",
     "@openzeppelin/test-helpers": "^0.5.12",
+    "@truffle/hdwallet-provider": "^1.4.3",
+    "body-parser": "^1.19.0",
+    "jquery": "^3.6.0",
+    "jsdom": "^16.7.0",
     "truffle-assertions": "^0.9.2",
-    "truffle-security": "^1.7.3"
+    "truffle-security": "^1.7.3",
+    "web3": "^1.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
